--- a/YSBlog/front/src/pages/settings/settings.css
+++ b/YSBlog/front/src/pages/settings/settings.css
@@ -69,9 +69,9 @@
     border-bottom: 1px solid lightgray;
 }
 
-.settingsSubmit {
-    width: 150px;
+.settingsSubmitButton {
     align-self: center;
+    width: 150px;
     border: none;
     border-radius: 10px;
     color: white;
@@ -79,6 +79,13 @@
     padding: 10px;
     margin-top: 20px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.settingsSubmitButton:hover{
+    background-color: rgb(1, 114, 114);
 }
 
 
