--- a/YSBlog/front/src/pages/write/write.css
+++ b/YSBlog/front/src/pages/write/write.css
@@ -41,14 +41,20 @@
     width: 70vw;
 }
 
+.writeInput::placeholder {
+    color: rgb(189, 185, 185);
+    font-weight: 400;
+  }
+
 .writeInput:focus{
     outline: none;
 }
 
 .writeText {
-    font-size: 20px;
+    width: 70vw;
     height: 100vh;
-    
+    font-family: inherit;
+    font-size: 20px;    
 }
 
 .writeSubmit {
@@ -60,7 +66,9 @@
     padding: 10px;
     border: none;
     border-radius: 10px;
-    cursor: pointer;
     font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
 }
 
